--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.3.3",
+    "json-server": "^1.0.0-beta.3",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
     "semantic-ui-css": "^2.2.11",
